# ai-agent-comparision-test

./: .env.example  .gitignore  .pre-commit-config.yaml  config.py  deep_main.py  example.py  exceptions.py  langgraph_pydantic_agent.py  logger.py  main.py  pyproject.toml  requirements.txt  requirements_langgraph.txt  run.py  setup_check.py  test_results.json  test_results_deepagent.json  test_results_pydantic.json  utils.py
docs/: LANGGRAPH_AGENT_README.md  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md
pevr_agent/: agents.py  state.py  workflow.py
pevr_agent/nodes/: executor.py  planner.py  verifier.py
test_cases/: QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  TESTS-OVERVIEW.md  eval_utils.py  example_usage.py  test_runner.py  validate_tests.py
test_cases/02_extraction_audit/: README.md  config.json  evaluator.py  expected_output.json  input_data.json  mocked_tools.py
test_cases/03_tool_conflict_resolution/: evaluator.py  mocked_tools.py
test_cases/04_planner_workers_join/: README.md  config.json  evaluator.py  input_data.json  mocked_tools.py
test_cases/05_rca_fix_test/: config.json  evaluator.py  input_data.json  mocked_tools.py
test_cases/06_safe_ops_approval/: config.json  mocked_tools.py
test_cases/08_batch_research/: config.json  expected_output.json  input_data.json
test_cases/app_security_blind_patcher/: README.md  config.json  evaluator.py  expected_output.json  mocked_tools.py  output_schema.py
test_cases/batch_research/: README.md  config.json  evaluator.py  expected_output.json  mocked_tools.py  output_schema.py
(+86 files in other folders)
